<resources>
    <string name="app_name">MiniMoneybox</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_full_name">Full Name (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="email_address_error">Please enter a correct email address</string>
    <string name="password_error">Please enter a correct password</string>
    <string name="full_name_error">Please enter your full name</string>
    <string name="input_valid">Input is valid!</string>
    <string name="login_failed">Login failed</string>
    <string name="products_loading_failed">Failed to load products</string>
    <string name="add_to_moneybox">Add £20</string>
    <string name="welcome">Hello %s!</string>
    <string name="plan_value">Total Plan Value: £%s</string>
    <string name="product_description">%s\nPlan Value: £%s\nMoneybox: £%s</string>
    <string name="moneybox_total">Moneybox: £%s</string>
</resources>
